--- a/style.css
+++ b/style.css
@@ -1,42 +1,55 @@
 body{
-    font-family: Arial;
-    background-color: rgb(38, 31, 95);
     display: flex;
     justify-content: space-between;
+    background-color: rgb(56, 38, 113);
     margin: 0px;
-    padding: 0px;
+}
+
+.Pasek{
+    width: 100%;
+    height: 100%;
     border: 0px;
+    padding: 0px;
+    margin: 0px;
+    background-color:rgb(33, 23, 68) ;
+    display: flex;
+    justify-content: space-between;
 }
 
 .Logo{
-    font-size: 45px;
     font-family: Arial;
     color: wheat;
+    font-size: 40px;
+    height: 50px;
+    padding: 0px;
     padding-left: 15px;
+    margin: 4px 0px 4px 0px;
     cursor: pointer;
-    margin: 0px;
-    height: 40px;
 }
 
+.Logo b{
+    height: 100%;
+    width: 100%;
+}
+
+.Menu ul li,
 .Menu ul li a{
-    text-decoration: none;
+    font-size: 22px;
+    font-family: arial;
     color: wheat;
-    text-transform: uppercase;
-    padding-left: 50px;
-    margin: 0px;
+    text-decoration: none;
+    list-style: none;
+    height: 100%;
+    padding-right: 15px;
+}
+
+.Menu ul li a:hover{
+    color: deepskyblue;
+    transition: color 500ms ease-in;
 }
 
 .Menu ul{
-    list-style: none;
     display: flex;
     justify-content: space-between;
 }
 
-.Menu{
-    padding: 0px;
-    margin: 0px;
-}
-
-*{
-    padding-top: 15px;
-}
